寻找最近公共父节点